# manuscript-checker-cf

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
src/: db.py  entry.py  notify.py  paper.py
